# Notification-Service

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  __main__.py  requirements.txt  setup.cfg
examiner/: README.md  message_templates.py  publisher.py  publisherRPC.py
src/core/: settings.py
src/core/rabbitmq/: __init__.py
src/gateways/sms/: __init__.py  functions.py
src/gateways/webpush/: __init__.py  functions.py
src/helpers/json_parser/: __init__.py
src/helpers/messages/: __init__.py  message_source.py
src/helpers/sms_proxy/: __init__.py  services.py
src/resources/sms/: __init__.py  validators.py
src/resources/webpush/: __init__.py  validators.py
