[bumpversion]
current_version = 1.0.1
build_number = 1e0c5e56
commit = False
tag = False

[metadata]
name = notification-microservice
author = Alireza khabbazan
description = A push notification and SMS microservice with Python and based on RabbitMQ message broker.
keywords = rabbitmq, rpc, setuptools

[options]
python_requires = >=3.9, <4
install_requires = 
	django
	graphene

[bumpversion:file:version.txt]

[bumpversion:file:src/core/settings.py]

[flake8]
ignore = E221, E251, W191, E223, DUO102, N805, N802, N812, F403, F401, E266, E303, B019
exclude = .git,__pycache__
max-line-length = 170
